  initial experience.  Note that as AHAP development progresses, binary updates
  will be infrequent, so the content included with the Steam binary bundle will
  lag behind over time.  But at least they won't have to download absolutely
  every bit of content from scratch (there's already about 50MB of it, just in
  the starter content alone).



Version 415   2024-March-15

--Moving bulk download portion of a web request into a separate thread for
  maximum throughput while still updating GUI with progress.  Old thread-free
  method, using non-blocking IO, would not achieve maximum download speeds on
  fast connections because OS receive buffer would fill up when we're waiting
  for vsync.



Version 414   2024-March-12

--Actually, we can't load mods into RAM only in an active Editor, since they
  pollute the object, sprite, and sound ID space.  If the Editor ever creates
  a new object, sprite, or sound while the RAM-only mod is loaded, it will
  either need to leave a gap in the ID space on disk, or overwrite the mod
  data.  Fixed the Editor to only IMPORT ADD and IMPORT REPLACE, and not load
  anything from the mods folder.  Only the game client can load mods.

--Each sound in the soundBank folder now has a .txt file tracking authorship.

--OXZ export/import files now track authorship tags for sounds.

--Fixed so that when importing authorless sprites from OXZ files, we don't
  auto-tag sprites with our authorship tag (falsely taking credit).

--Fixed sprite import so that TGA files saved to disk are file-identical with
  what was exported.  Before, we were loading the image data from the TGA data
  in the import and then saving a new TGA file, which might not result in
  file-identical TGAs (especially for TGA files made with another tool, or
  generated by older Editor code).

--Fixed so that we have separate AHAP URL settings files for all of our
  auxillary servers, as accessed by the client.
